center hello on mobile. a button collape was adding space to the left it it. fix by giving it a width of 0px - also rename both hmtl and scss. About/contact is now the main page

--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,4 +1,3 @@
-@import "contact";
 @font-face {
   font-family: 'ProximaNova-Extrabold';
   src: url('../fonts/ProximaNova-Extrabold.otf');
@@ -39,8 +38,6 @@ nav {
   }
 }
 
-
-
 .sidebar {
 	margin: 0;
 	padding: 0;
@@ -53,9 +50,6 @@ nav {
 
 .brand-logo {
 	margin-left: 15px;
-	// @media screen and (max-width: 500px) {
-	// 	margin-left: 30px;
-	// }
 }
 
 li {
@@ -121,11 +115,14 @@ nav ul li:hover {
 .menu {
 	display: block;
 	position: relative;
-	top: 25%;
-	margin: 5px;
+  margin: 5px 8px 5px;
 	height: 4px;
 	width: 20px;
 	background-color: black;
+}
+
+.first {
+  margin-top: 15px;
 }
 
 .vinyl-project-cover:nth-child(odd) {
